fixed text align

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -88,6 +88,7 @@
 }
 .human {
   background-color: rgb(51, 192, 91);
+  text-align: left;
 }
 .ai {
   background-color: rgb(128, 118, 118);
